--- a/WebsNidura/Views/Shared/_Layout.cshtml
+++ b/WebsNidura/Views/Shared/_Layout.cshtml
@@ -30,9 +30,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Inicio</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">Nosotros</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Services">Servicios</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
@@ -45,7 +46,21 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - WebsNidura</p>
+            <div class="row panel-footer">
+                <div class="col-md-3">
+                    <h2>WebsNidura</h2>
+                    <h4>Diseño y administración de páginas webs</h4>
+                    <p>&copy; 2019 - WebsNidura</p>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30271.357973463455!2d-69.87929142613923!3d18.487294039020988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8eaf8877b255ade1%3A0x8fe5540db30c324e!2sRespaldo%203%2C%20Santo%20Domingo%20Este!5e0!3m2!1ses-419!2sdo!4v1569517494902!5m2!1ses-419!2sdo" width="500" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                </div>
+            </div>
         </footer>
     </div>
 
