--- a/WebsNidura/Views/Home/Index.cshtml
+++ b/WebsNidura/Views/Home/Index.cshtml
@@ -1,57 +1,61 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <br />
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="https://picsum.photos/1200/300?random=1" alt="ASP.NET" class="img-responsive" />
+<section>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="https://picsum.photos/1200/300?random=1" alt="ASP.NET" class="img-responsive" />
+            </div>
+            <div class="item">
+                <img src="https://picsum.photos/1200/300?random=2" alt="Visual Studio" class="img-responsive" />
+            </div>
+            <div class="item">
+                <img src="https://picsum.photos/1200/300?random=3" alt="Microsoft Azure" class="img-responsive" />
+            </div>
         </div>
-        <div class="item">
-            <img src="https://picsum.photos/1200/300?random=2" alt="Visual Studio" class="img-responsive" />
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</section>
+<br />
+<section>
+    <div class="row jumbotron">
+        <div class="col-lg-12">
+            <h2>Nosotros</h2>
+            <ul>
+                <li>Somos una empresa que ofrece servicios de creación de páginas web, prestando las mejores tecnologías del mercado y procurando tener la máxima calidad de nuestros proyectos. <a asp-action="About">Leer más</a></li>
+            </ul>
         </div>
-        <div class="item">
-            <img src="https://picsum.photos/1200/300?random=3" alt="Microsoft Azure" class="img-responsive" />
+
+    </div>
+    <div class="row jumbotron">
+        <div class="col-lg-12">
+            <h2>Servicios</h2>
+            <ul>
+                <li>Ofrecemos nuestros servicios para que puedas tener una página web moderna, optimizada y con las características más avanzadas en html5. <a asp-action="Services">Leer más</a></li>
+            </ul>
         </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-<div class="row jumbotron jumbotron">
-    <div class="col-lg-12">
-        <h2>Nosotros</h2>
-        <ul>
-            <li>Somos una empresa que ofrece servicios de creación de páginas web, prestando las mejores tecnologías del mercado y procurando tener la máxima calidad de nuestros proyectos. <a asp-action="About">Leer más</a></li>
-        </ul>
+    <div class="row jumbotron">
+        <div class="col-lg-12">
+            <h2>¿Cómo puedo solicitar el servicio de WebsNidura?</h2>
+            <ul>
+                <li>Ve al apartado "Servicios" y tendrás un paso a paso de cómo solicitar los planes que tenemos disponibles. <a class="btn btn-primary" asp-action="Services">Servicios</a></li>
+                <li>Si no tienes asociada una cuenta de WebsNidura, puedes crearla aquí. <a class="btn btn-success" href="/Identity/Account/Register">Registrarse</a></li>
+            </ul>
+        </div>
     </div>
-    
-</div>
-<div class="row jumbotron">
-    <div class="col-lg-12">
-        <h2>Servicios</h2>
-        <ul>
-            <li>Ofrecemos nuestros servicios para que puedas tener una página web moderna, optimizada y con las características más avanzadas en html5. <a asp-action="Services">Leer más</a></li>
-        </ul>
-    </div>
-</div>
-<div class="row jumbotron">
-    <div class="col-lg-12">
-        <h2>¿Cómo puedo solicitar el servicio de WebsNidura?</h2>
-        <ul>
-            <li>Ve al apartado "Servicios" y tendrás un paso a paso de cómo solicitar los planes que tenemos disponibles. <a class="btn btn-primary" asp-action="Services">Servicios</a></li>
-            <li>Si no tienes asociada una cuenta de WebsNidura, puedes crearla aquí. <a class="btn btn-success" asp-action="Register">Registrarse</a></li>
-        </ul>
-    </div>
-</div>
+</section>
