--- a/WebsNidura/Views/Home/Services.cshtml
+++ b/WebsNidura/Views/Home/Services.cshtml
@@ -1,11 +1,27 @@
 ﻿
 @{
-    ViewData["Title"] = "Services";
+    ViewData["Title"] = "Nuestros Servicios";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3>@ViewData["Title"]</h3>
-<h2>@ViewData["Message"]</h2>
+<br />
+<h2>@ViewData["Title"]</h2>
 
-
+<div class="container">
+    <div class="row">
+        <div id="qrCode" class="col-md-5 jumbotron">
+            <h4 style="text-align:justify">Ofrecemos nuestros servicios para que puedas tener una página web moderna, optimizada y con las características más avanzadas en html5, con un diseño responsive para que tus sitios web puedan adaptarse a pantallas de computadoras, celulares e incluso tablets. Nuestros planes incluyen entrenamientos sobre el uso de tu nueva plataforma web para que capacites a todo tu personal</h4>
+        </div>
+        <div id="qrCode" class="col-md-5 jumbotron">
+            <p>Nuestras páginas web son diseñadas con:</p>
+            <ul>
+                <li>Tecnología HTML5</li>
+                <li>ASP.NET Core</li>
+                <li>Bootstrap 4</li>
+                <li>Angular</li>
+                <li>Bases de datos MSSQL, PHP, MYSQL</li>
+            </ul>
+        </div>
+    </div>
+</div>
 
