--- a/WebsNidura/Views/Home/About.cshtml
+++ b/WebsNidura/Views/Home/About.cshtml
@@ -1,7 +1,37 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Nosotros";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="container">
+    <div class="row jumbotron">
+        <div class="col-lg-12">
+            <h3>¿Quienes somos?</h3>
+            <h4>Somos una empresa que ofrece servicios de creación de páginas web de alta calidad orientado a las más modernas tecnologías de la actualidad, siendo principal objetivo la satisfacción del cliente.</h4>
+        </div>
+    </div>
+    <br />
+    <div class="row jumbotron">
+        <div class="col-lg-12">
+            <h3>Misión</h3>
+            <h4>Ser la empresa lider del mercado en creación y administración de páginas web, logrando un reconocimiento internacional sin perder la calidad y la filosofía de la empresa</h4>
+        </div>
+    </div>
+    <br />
+    <div class="row jumbotron">
+        <div class="col-lg-12">
+            <h3>Visión</h3>
+            <h4>Ser la mejor opción para solicitar la creación de páginas web, por su flexividad y seguridad</h4>
+        </div>
+    </div>
+    <br />
+    <div class="row jumbotron">
+        <div class="col-lg-12">
+            <h3>Nuestro equipo de trabajo</h3>
+            <h4>Estamos formados por Desarrolladores Senior con certificaciones en Frontend y páginas web responsive, Desarrolladores Senior de Backend y universitarios recién graduados de universidades reconocidas a nivel nacional e internacional</h4>
+        </div>
+    </div>
+    <br />
+</div>
+
