--- a/WebsNidura/Views/Home/Contact.cshtml
+++ b/WebsNidura/Views/Home/Contact.cshtml
@@ -1,17 +1,19 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contacto";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Reppública Dominicana<br />
+    Santo Domingo Este, Respaldo 3<br />
+    <abbr title="Teléfono">T:</abbr>
+    (809)-384-0182 
+    <abbr title="Extensión">Ext:</abbr>
+    223
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Ayuda:</strong> <a href="mailto:Support@example.com">Help@webs.nidura.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@webs.nidura.com</a>
 </address>
