--- a/WebsNidura/wwwroot/css/site.css
+++ b/WebsNidura/wwwroot/css/site.css
@@ -3,6 +3,9 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: transparent;
+    background-image: url(../images/ripples.png);
+
 }
 
 /* Wrapping element */
